--- a/hw_01_statistic_json_parser/pom.xml
+++ b/hw_01_statistic_json_parser/pom.xml
@@ -41,6 +41,7 @@
 
     <build>
         <plugins>
+            <!-- Maven Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -50,6 +51,7 @@
                     <target>17</target>
                 </configuration>
             </plugin>
+            <!-- Surefire Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
