--- a/hw_02_book_management_application/src/main/resources/db/changelog/V2__insert_authors.yml
+++ b/hw_02_book_management_application/src/main/resources/db/changelog/V2__insert_authors.yml
@@ -10,4 +10,5 @@ databaseChangeLog:
               ('Jane', 'Austen'),
               ('Leo', 'Tolstoy'),
               ('George', 'Orwell'),
-              ('Ernest', 'Hemingway');
+              ('Ernest', 'Hemingway'),
+              ('Stephen','King');
