--- a/hw_03_modern_frontend_book_management/package.json
+++ b/hw_03_modern_frontend_book_management/package.json
@@ -7,9 +7,11 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.12",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "md5": "^2.3.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-intl": "^6.6.2",
     "react-jss": "^10.10.0",
