--- a/hw_02_book_management_application/src/main/resources/application.yaml
+++ b/hw_02_book_management_application/src/main/resources/application.yaml
@@ -5,10 +5,10 @@ spring:
 
   # Database properties
   datasource:
-    driver-class-name: org.postgresql.Driver
+    #driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
-    password: ${DB_PASSWORD} #Change password
+    password: postgres #Change password
 
     # JPA properties
   jpa:
@@ -18,7 +18,7 @@ spring:
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     #open-in-view: false
-    #generate-ddl: true
+    generate-ddl: true
     properties:
       hibernate:
         format_sql: true
