--- a/hw_02_book_management_application/pom.xml
+++ b/hw_02_book_management_application/pom.xml
@@ -13,6 +13,8 @@
     <url>https://maven.apache.org</url>
     <properties>
         <java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
