--- a/hw_02_book_management_application/src/main/resources/application.yaml
+++ b/hw_02_book_management_application/src/main/resources/application.yaml
@@ -18,7 +18,7 @@ spring:
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     #open-in-view: false
-    generate-ddl: true
+    #generate-ddl: true
     properties:
       hibernate:
         format_sql: true
