--- a/hw_02_book_management_application/docker-compose.yaml
+++ b/hw_02_book_management_application/docker-compose.yaml
@@ -1,13 +1,10 @@
-version: '4.3'
+version: '3.9'
 services:
   book_management:
-    image: postgres:16.3
+    image: postgres:16.2
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
     ports:
       - '5432:5432'
-
-
-#docker-compose -f docker-compose.yaml up -d
