--- a/hw_05_1_email_sender/pom.xml
+++ b/hw_05_1_email_sender/pom.xml
@@ -54,6 +54,13 @@
             <version>5.2.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>1.19.8</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
