Added new branch and added gateway configuration. Refactored docker-compose-infra.yml and deleted d-c files from module 2 and 5

--- a/hw_02_book_management_application/src/main/resources/application.yaml
+++ b/hw_02_book_management_application/src/main/resources/application.yaml
@@ -3,6 +3,17 @@ spring:
   application:
     name: library
 
+  config:
+    import: optional:consul:/
+  cloud:
+    consul:
+      host: localhost
+      port: 8500
+      discovery:
+        service-name: library
+        health-check-path:  /health
+
+
   # Database properties
   datasource:
     #driver-class-name: org.postgresql.Driver
@@ -36,6 +47,17 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
     bootstrap-servers: localhost:9092
+
+
+management:
+  endpoint:
+    health:
+      show-details: always
+  endpoints:
+    web:
+      base-path: /
+
+
 
 # Server configuration
 server:
