--- a/docker-compose-infra.yml
+++ b/docker-compose-infra.yml
@@ -1,6 +1,14 @@
-version: "3.9"
-
+version: '3.9'
 services:
+  postgres:
+    image: postgres:16.2
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+    ports:
+      - '5432:5432'
+
   elasticsearch:
     image: elasticsearch:8.6.1
     container_name: elasticsearch
@@ -35,31 +43,24 @@ services:
     container_name: kafka
     ports:
       - '9092:9092'
+
     environment:
       - KAFKA_BROKER_ID=1
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
 
     depends_on:
       - zookeeper
 
-#  email-sender:
-#    container_name: email-sender
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#    ports:
-#      - "8090:8090"
-#    depends_on:
-#      - elasticsearch
-#    volumes:
-#      - ./.env:/app/.env
-#    networks:
-#      - library
-#    environment:
-#      - SERVER_PORT= 8090
+  consul:
+    image: bitnami/consul
+    container_name: "gws-consul"
+    ports:
+      - "8500:8500"
+    command: "consul agent -dev -ui -client=0.0.0.0"
+
 
 networks:
   library:
