--- a/hw_05_1_email_sender/src/main/resources/application.properties
+++ b/hw_05_1_email_sender/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 spring.application.name=hw_05_1_email_sender
 server.port=8090
 
+#Cloud
+spring.config.import=optional:consul:/
+spring.cloud.consul.host=localhost
+spring.cloud.consul.port=8500
+spring.cloud.consul.discovery.service-name=service-contracts
+spring.cloud.consul.discovery.health-check-path=/health
+
 # Kafka
 kafka.topic.bookReceived=bookReceived
 spring.kafka.consumer.group-id=${spring.application.name}
@@ -13,6 +20,10 @@ spring.kafka.bootstrap-servers=localhost:9092
 
 # Elasticsearch
 elasticsearch.address=http://elasticsearch:9200
+
+management.endpoint.health.show-details=always
+management.endpoints.web.base-path=/
+management.endpoints.web.exposure.include=*
 
 
 
